tests/max_encoded_len_ui/not_mel.stderr
error[E0432]: unresolved import `parity_scale_codec::MaxEncodedLen`
 --> tests/max_encoded_len_ui/not_mel.rs:1:34
  |
1 | use parity_scale_codec::{Encode, MaxEncodedLen};
  |                                  ^^^^^^^^^^^^^ no `MaxEncodedLen` in the root
  |
note: found an item that was configured out
 --> src/lib.rs
  |
  | pub use max_encoded_len::MaxEncodedLen;
  |                          ^^^^^^^^^^^^^
  = note: the item is gated behind the `max-encoded-len` feature
note: found an item that was configured out
 --> src/lib.rs
  |
  | pub use parity_scale_codec_derive::MaxEncodedLen;
  |                                    ^^^^^^^^^^^^^

error: cannot determine resolution for the derive macro `MaxEncodedLen`
 --> tests/max_encoded_len_ui/not_mel.rs:6:18
  |
6 | #[derive(Encode, MaxEncodedLen)]
  |                  ^^^^^^^^^^^^^
  |
  = note: import resolution is stuck, try simplifying macro imports

error[E0599]: no function or associated item named `max_encoded_len` found for struct `Generic` in the current scope
  --> tests/max_encoded_len_ui/not_mel.rs:12:29
   |
7  | struct Generic<T> {
   | ----------------- function or associated item `max_encoded_len` not found for this struct
...
12 |     let _ = Generic::<NotMel>::max_encoded_len();
   |                                ^^^^^^^^^^^^^^^ function or associated item not found in `Generic<NotMel>`
